--- a/gettext-runtime/libasprintf/configure.ac
+++ b/gettext-runtime/libasprintf/configure.ac
@@ -20,7 +20,7 @@ AC_PREREQ([2.52])
 AC_INIT([libasprintf], [1.0])
 AC_CONFIG_SRCDIR([vasprintf.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([silent-rules])
 AM_CONFIG_HEADER([config.h])
 
 dnl Checks for programs.
