--- a/gettext-tools/gnulib-lib/.gitignore
+++ b/gettext-tools/gnulib-lib/.gitignore
@@ -174,6 +174,10 @@
 /ostream.oo.c
 /ostream.oo.h
 /pathmax.h
+/pipe-filter-aux.h
+/pipe-filter-ii.c
+/pipe-filter.c
+/pipe-filter.h
 /pipe-safer.c
 /pipe.c
 /pipe.h
