Update error message.

--- a/gettext-tools/misc/Makefile.am
+++ b/gettext-tools/misc/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/misc subdirectory of GNU gettext
-## Copyright (C) 1995-1997, 2000-2003, 2005-2007 Free Software Foundation, Inc.
+## Copyright (C) 1995-1997, 2000-2003, 2005-2007, 2009 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -38,7 +38,7 @@ archive.tar.gz:
 	if test -f $(gettextsrcdir)/archive.tar.gz; then \
 	  cp -p $(gettextsrcdir)/archive.tar.gz $@; \
 	else \
-	  echo "archive.tar.gz is not in the CVS. Please copy the archive.tar.gz from an already installed release to gettext-tools/misc/." 1>&2; \
+	  echo "archive.tar.gz is not under version control. Please copy the archive.tar.gz from an already installed release to gettext-tools/misc/." 1>&2; \
 	  exit 1; \
 	fi
 
