--- a/gettext-tools/libgrep/Makefile.am
+++ b/gettext-tools/libgrep/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for libgrep directory in GNU gettext package.
-## Copyright (C) 2005-2007 Free Software Foundation, Inc.
+## Copyright (C) 2005-2007, 2009 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -35,8 +35,7 @@ libgrep_a_SOURCES = \
 
 LIBADD_SOURCE = \
   memchr.c \
-  regex.h regex.c \
-  strdup.c
+  regex.h regex.c
 
 # How to build libgrep.a.
 libgrep_a_LIBADD = @LIBGREPOBJS@
